# marcus

./: .env.example  .gitignore  marcus  pyproject.toml
configs/: default.yaml  system_prompt.txt  training_grpo.yaml  training_sft.yaml
data/synthetic/: instruction_pairs.jsonl
data/training/: train.jsonl  valid.jsonl
report/: Definitions.tex  Project.tex  REPORT_PLAN.md  References.bib  ecsproject.cls
scripts/: compare_checkpoints.py  download_data.py  eval_model.py  extract_pdf_letters.py  prepare_training_data.py  record_voice_ref.py  setup_env.sh  sitecustomize.py
scripts/plots/: generate_all.py
src/marcus/: __init__.py  config.py
src/marcus/data/: __init__.py  clean.py  download.py  format.py  synthesize.py
src/marcus/models/: __init__.py  asr.py  llm.py  tts.py
src/marcus/pipeline/: __init__.py  agent.py  audio_io.py  conversation.py
src/marcus/rewards/: __init__.py  coherence.py  composite.py  stoic_alignment.py
src/marcus/training/: __init__.py  grpo.py  sft.py
src/marcus/ui/: __init__.py  calibrate.py  cli.py  feedback.py  gradio_app.py
tests/: conftest.py  test_agent.py  test_asr.py  test_audio_io.py  test_data_pipeline.py  test_llm.py  test_rewards.py  test_tts.py
